name:                transformers-lift
version:             0.1.0.0
synopsis:            Ad-hoc type classes for lifting
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Index Int
maintainer:          vlad.z.4096@gmail.com
-- copyright:           
category:            Control
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  exposed-modules:     Control.Monad.Trans.Lift.Local
                       Control.Monad.Trans.Lift.CallCC
                       Control.Monad.Trans.Lift.Catch
                       Control.Monad.Trans.Lift.Listen
                       Control.Monad.Trans.Lift.Pass
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9
               ,       transformers >= 0.4.2
               ,       mmorph >= 1.0.4
               ,       monad-control >= 1.0.0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
